
2020-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_name_errmsg), tree.h, typeck.c (cb_emit_move): new function
	  for better error messages
	* tree.c (cb_field_size), tree.h, field.c, typeck.c: use new define
	  FIELD_SIZE_UNKNOWN instead of -1
	* typeck.c (validate_move): skip truncation warnings if target and/or
	  source sizes are unknown
	* codegen.c, tree.h: replacing old conflicting constant prefix s_
	  by new CB_PREFIX_SCR_FIELD
	* codegen.c: partially limited variable scope
	* tree.c (cb_tree_category), tree.h: guard cb_category by CB_CATEGORY_ERROR
	* error.c (print_error): used fixed COB_SMALL_BUFF instead of
	  unrelated system-specific BUFSIZ
	* parser.y, reserved.c: PROGRAM-ID/FUNCTION-ID added prototype parsing
	* parser.y, reserved.c, tree.h: added PROGRAM-ID IS RESIDENT
	  (without any codegen yet)
	* parser.y, reserved.c: added parsing for ACUCOBOL transaction management
	* parser.y: fixed parsing for ACUCOBOL's graphical control syntax -
	  screen and control options may be intermixed now
	* parser.y, reserved.c: parsing for screen clauses ENABLED, VISIBLE, HELP-ID
	* tree.h, parser.y, field.c, codegen.c, cobc.c: added CB_USAGE_CONTROL and
	  handling it which fixes several internal compiler errors for sources
	  that contain those

2020-01-02  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Check for SQL reserved words used as column names

2020-01-01  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, field.c (copy_into_field), tree.h, config.def:
	  FR #193 implementation of SAME AS
	* cobc.c: Copyright year update

2020-01-01  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Updates for ODBC interface

2019-12-28  Edward Hart <edward.dan.hart@gmail.com>

	* config.c, config.def, ppparse.y, pplex.l: added ASSIGN directive and new option
	  implict-assign-dynamic-var (see bug #571).
	* config.c: added options external (= ibm) and dynamic (= mf) to
	  assign-clause.
	* typeck.c (cb_build_assignment_name): refactored.
