@@ -1,4 +1,8 @@
 
+2020-01-04  Simon Sobisch <simonsobisch@gnu.org>
+
+	* codegen.c (output_stmt): fixed bad check in file related statements
+
 2020-01-03  Simon Sobisch <simonsobisch@gnu.org>
 
 	* tree.c (cb_name_errmsg), tree.h, typeck.c (cb_emit_move): new function
